trying to fix parallax on mobile

--- a/sass/components/_separator.scss
+++ b/sass/components/_separator.scss
@@ -8,7 +8,16 @@
 
     @include responsive(phone) {
         //width <700
-        
         height: 100vh;
-    }
+
+        &::before{
+            position:fixed;
+            width:100%;
+            height:100%;
+            left:0;
+            top:0;
+            background: url(../img/parallax-separator.jpg);
 };
+    }
+
+    
