--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -56,7 +56,6 @@
         margin-right: 6rem;
         @include responsive(small-phone) {
             margin-right: 3rem;
-            margin-left: 3rem;
         }
 
 
